# riscv-hs

./: .gitignore  readme.md  riscv-hs.cabal
src/: Cpu.hs  Instruction.hs  Main.hs  Memory.hs  Util.hs  readme.md
test/: SimpleTest.hs  readme.md
test/bins/: square.bin.txt
test/c/: fib  fib.c  mul  mul-input  mul-input.c  mul.c
