cabal-version:      3.0
name:               riscv-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Adam Mitha, Em Chu
-- maintainer:
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable riscv-hs
    import:           warnings
    main-is:          Main.hs
    other-modules:    Cpu
                    , Memory
                    , Instruction
                    , Util
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010
