cabal-version:      3.0
name:               riscv-hs
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Adam Mitha, Em Chu
-- maintainer:
-- copyright:
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable riscv-hs
    import:           warnings
    main-is:          Main.hs
    other-modules:    Cpu
                    , Memory
                    , Instruction
                    , Util
    build-depends:    base ^>=4.14.3.0
                    , ghc
                    , containers
                    , binary
                    , bytestring
                    , vector
    hs-source-dirs:   src
    default-language: Haskell2010

-- todo can't get this to work
test-suite simple
    type:             exitcode-stdio-1.0
    main-is:          SimpleTest.hs
    hs-source-dirs:   test
    -- other-modules:    Cpu
    --                 , Memory
    --                 , Instruction
    --                 , Util
    build-depends:    base
                    , riscv-hs
                    , containers,
    default-language: Haskell2010

    -- default-language: Haskell2010
